tests/ui/unsorted-match-unstable.stderr
error: E::Bbb should sort before E::Ddd
  --> $DIR/unsorted-match-unstable.rs:15:5
   |
15 |     #[sorted]
   |     ^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
